--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
